rbx_binary/src/tests/snapshots/serializer__folder_from_studio.snap
---
source: rbx_binary/src/tests/serializer.rs
expression: decoded
---
num_types: 1
num_instances: 1
chunks:
  - Meta:
      entries:
        - - ExplicitAutoJoints
          - "true"
      remaining: ""
  - Inst:
      type_id: 0
      type_name: Folder
      object_format: 0
      referents:
        - 0
      remaining: ""
  - Prop:
      type_id: 0
      prop_name: AttributesSerialize
      prop_type: 1
      remaining: AAAAAA==
  - Prop:
      type_id: 0
      prop_name: Name
      prop_type: 1
      remaining: BgAAAEZvbGRlcg==
  - Prop:
      type_id: 0
      prop_name: Tags
      prop_type: 1
      remaining: AAAAAA==
  - Prnt:
      version: 0
      links:
        - - 0
          - -1
      remaining: ""
  - End
