rbx_binary/src/tests/snapshots/serializer__just_folder.snap
---
source: rbx_binary/src/tests/serializer.rs
expression: decoded
---
num_types: 1
num_instances: 1
chunks:
  - Inst:
      type_id: 0
      type_name: Folder
      object_format: 0
      referents:
        - 0
      remaining: ""
  - Prop:
      remaining: AAAAAAQAAABOYW1lAQYAAABGb2xkZXI=
  - Prnt:
      remaining: AAEAAAAAAAAAAAAAAQ==
  - End
